Exercice 2: Lorsque la facture LN est payée, le résultat de l’opération demandée est affiché.

--- a/index.html
+++ b/index.html
@@ -107,11 +107,18 @@
                 target="_blank" href="https://harsh98trivedi.github.io">Harsh Trivedi</a></div>
 		</div>
 
+		<br/>
+		<br/>
+
 		<hr style="max-width: 50vw;">
 
+
+
+		<!-- ###################################################################################"" -->
+		<!-- 2 tableaux permettant d'afficher les éléments demandés dans les 2 premières questions -->
 	<div id="LN_Invoice_Created" style="display: none">
 		<h3> Invoice Created </h3>
-    	 <table id="Invoice_Table" style="width:70% ; border-collapse: collapse" >
+    	 <table id="Invoice_Created_Table" class="Invoice_Table" style="width:70% ; border-collapse: collapse" >
 		  <tr>
 		    <th>Properties</th>
 		    <th colspan="3">Value</th>
@@ -134,6 +141,49 @@
 		  </tr>
 		</table> 
 	</div>
+
+	<br/>
+	<br/>
+
+
+	<div id="LN_Invoice_Settled" style="display: none">
+		<h3> Invoice Settled </h3>
+    	 <table id="Invoice_Settled_Table" class="Invoice_Table" style="width:70% ; border-collapse: collapse" >
+		  <tr>
+		    <th>Properties</th>
+		    <th colspan="3">Value</th>
+		  </tr>
+		  <tr>
+		    <td>payment_preimage</td>
+		    <td></td>
+		  </tr>
+		  <tr>
+		    <td>payment_hash</td>
+		    <td></td>
+		  </tr>
+		  <tr>
+		    <td>total_amt</td>
+		    <td></td>
+		  </tr>
+		  <tr>
+		    <td>total_amt_msat</td>
+		    <td></td>
+		  </tr>
+		  <tr>
+		    <td>total_fees</td>
+		    <td></td>
+		  </tr>
+		  <tr>
+		    <td>total_fees_msat</td>
+		    <td></td>
+		  </tr>
+		</table> 
+	</div>
+	<!-- ###################################################################################"" -->
+
+	<br/>
+	<br/>
+
 
 	</div>
     <div id="turn">
